samples/_failures_safe/1761254716_00c9a2_compile_base_compile_error/stderr.txt
./samples/SAFE/__tmp_19f0aaad.c: In function ‘print_entries_by_level’:
./samples/SAFE/__tmp_19f0aaad.c:131:5: error: expected declaration or statement at end of input
  131 |     }
      |     ^
